noinst_LTLIBRARIES = libcacheismolua.la
libcacheismolua_la_SOURCES = luacacheitem.h luacacheitem.c luaconsistent.h luaconsistent.c luahashmap.h luahashmap.c marshal.h marshal.c luacommand.h luacommand.c luaclustermap.h luaclustermap.c binding.h binding.c    
libcacheismolua_la_LIBADD  = ../cluster/libcacheismocluster.la ../common/libcacheismocommon.la
